--- a/tools/rokko-map/js/modules/views/map.html
+++ b/tools/rokko-map/js/modules/views/map.html
@@ -1,7 +1,24 @@
-<div ng-controller="MapController">
+<div ng-controller="MapController" id="MapController">
     <div ng-switch on="width + height">
         <h1 ng-switch-when="0">{{title}}</h1>
+
         <p ng-switch-default>Grid: {{width}}x{{height}}</p>
     </div>
+
+    <div class="modal hide fade" id="mapDialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h3>New map settings</h3>
+        </div>
+        <div class="modal-body">
+            <p>Size in tiles:
+                <input type="text" value="{{width}}" placeholder="X" autofocus="true" class="span2"/>
+                <input type="text" value="{{height}}" placeholder="Y" class="span2"/>
+            </p>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal">Cancel</button>
+            <button class="btn btn-primary" ng-click="initGrid()">Continue</button>
+        </div>
+    </div>
 </div>
-<div style="height: 800px"></div>
