--- a/tools/rokko-map/js/modules/views/settings.html
+++ b/tools/rokko-map/js/modules/views/settings.html
@@ -5,18 +5,18 @@
         <label>Tile size</label>
 
         <p>
-            <input type="number" value="{{tile.width}}"/>
-            <input type="number" value="{{tile.height}}"/>
+            <input type="number" value="{{tile.width}}" ng-change="test()" ng-model="tile.width"/>
+            <input type="number" value="{{tile.height}}" ng-change="test()" ng-model="tile.height"/>
         </p>
 
         <label>Tile margin </label>
 
         <p>
-            <input type="number" value="{{tile.margin}}"/>
+            <input type="number" value="{{tile.margin}}" ng-change="test()" ng-model="tile.margin"/>
         </p>
 
         <div class="fileupload fileupload-new" data-provides="fileupload">
-            <div class="fileupload-preview fileupload-exists thumbnail" id="tileSettingsPrivew" ng-change="imgChange()" ng-model="atlas"></div>
+            <div class="fileupload-preview fileupload-exists thumbnail" id="tileSettingsPrivew"></div>
             <div>
                 <span class="btn btn-file btn-danger">
                     <span class="fileupload-new">Select image</span>
@@ -27,8 +27,10 @@
         </div>
 
         <div id="TilesetController">
-            <div class="tileImg" ng-repeat="tile in tiles">
-                <span class="tileImgBg">{{tile}}</span>
+            <div class="tileImg" ng-repeat="frame in frames.pos">
+                <span class="tileImgBg" style="
+                    background: url({{frames.img}}) -{{frame.x}}px -{{frame.y}}px;
+                    background-size: {{frames.width}}% {{frames.height}}px">({{frame.x}}, {{frame.y}})<br/>{{frames.hor}} x {{frames.ver}}</span>
             </div>
         </div>
     </div>
