Fixed tileset preview thumbnail: whatever the user specifies the size of each tile to be, we just set that to be the same size as the thumbnail. No more need to resize background image

--- a/tools/rokko-map/js/modules/views/settings.html
+++ b/tools/rokko-map/js/modules/views/settings.html
@@ -27,7 +27,7 @@
         </div>
 
         <div id="TilesetController">
-            <div class="tileImg" ng-repeat="frame in frames.pos">
+            <div class="tileImg" ng-repeat="frame in frames.pos" style="width: {{tile.width}}px; height: {{tile.height}}px">
                 <span
                         class="tileImgBg {{frame.isActive}}"
                         style="background: url({{frames.img}}) -{{frame.x}}px -{{frame.y}}px;"
